--- a/.env
+++ b/.env
@@ -1,15 +1,11 @@
-USR=user_5
-PWD=tjuhcfkmm4zp
 HOST=127.0.0.1
 PORT=27017
-DB_NAME=mlhub_5
-DATASET_DIR=./datasets
-
 MONGO_ROOT_USER=root
 MONGO_ROOT_PASS=pass
-MONGO_DB_NAME=gakkle
+MONGO_DB_NAME=mlhub_5
 FLASK_SECRET_KEY=very_long_and_random_string_1234567890
 FLASK_DEBUG=1
 FLASK_LISTEN_PORT=5000
 MONGOEXPRESS_LOGIN=root
 MONGOEXPRESS_PASSWORD=pass
+DATASET_DIR=./datasets
