[UPD] add dataset data render feature

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ FLASK_LISTEN_PORT=5000
 MONGOEXPRESS_LOGIN=root
 MONGOEXPRESS_PASSWORD=pass
 DATASET_DIR=./datasets
+
+MAX_COLS_NUM=30
+MAX_ROWS_NUM=30
