[FIX] Fixed flask launch

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,9 +4,9 @@ WORKDIR /app
 
 RUN apk add --no-cache netcat-openbsd
 
-COPY ../app/requirements.txt ./
+COPY ./app/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
-COPY .. /app
+COPY ./app /app
 
 EXPOSE 5000
 
@@ -17,6 +17,6 @@ ENTRYPOINT ["/bin/sh", "-c", "\
     while ! nc -z $MONGO_HOST $MONGO_PORT; do \
       sleep 1; \
     done; \
-    python app/create_db.py; \
-    exec flask run --host=0.0.0.0 --port=5000 \
+    python /app/create_db.py; \
+    exec flask --app /app/run.py run  --host=0.0.0.0 --port=5000 \
 "]
