--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,7 @@ RUN apk add --no-cache \
     libc6-compat
 COPY --from=mongo:6.0 /usr/bin/mongodump /usr/local/bin/
 COPY --from=mongo:6.0 /usr/bin/bsondump /usr/local/bin/
+COPY --from=mongo:6.0 /usr/bin/mongorestore /usr/local/bin/
 
 COPY ./app/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
