[ADD] mongo disable logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   db:
     image: mongo:8.0.6
+    command: mongod --quiet --logpath /dev/null
     volumes:
       - dbdata:/data/db/
     environment:
