--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       start_period: 30s
 
   mongo-express:
-    image: mongo-express
+    image: mongo-express:1.0.2-18-alpine3.18
     environment:
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASS}@db:27017
       ME_CONFIG_MONGODB_PORT: 27017
