--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       db:
         condition: service_healthy
     ports:
-      - 8081:8081
+      - "127.0.0.1:8081:8081"
     networks:
       - service_net
 
@@ -52,7 +52,7 @@ services:
       FLASK_DEBUG: ${FLASK_DEBUG}
       PYTHONUNBUFFERED: 1
     ports:
-      - "${FLASK_LISTEN_PORT:-5000}:5000"
+      - "127.0.0.1:${FLASK_LISTEN_PORT:-5000}:5000"
     networks:
       - service_net
     volumes:
